--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,7 @@
         <li><a href="/hello.jsp">JSP - index</a> </li>
         <li><a href="/instalments.jsp">Instalment calculator</a> </li>
         <li><a href="/instalments_bean.jsp">Instalment calculator with bean</a> </li>
+        <li><a href="/list">Customer list</a></li>
     </ul>
     <br>
     <p class="text-right">by Vadim Borys IMST1.2.1</p>
