lab 5 hibernate-annotations (doesn't work - returns empty list)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,7 @@
         <li><a href="/instalments.jsp">Instalment calculator</a> </li>
         <li><a href="/instalments_bean.jsp">Instalment calculator with bean</a> </li>
         <li><a href="/list">Customer list</a></li>
+        <li><a href="/hibernate_list">Customer list (Hibernate)</a></li>
     </ul>
     <br>
     <p class="text-right">by Vadim Borys IMST1.2.1</p>
